# lidar_trajectory

./: CMakeLists.txt  README.md  package.xml
include/lidar_trajectory/: lidar_trajectory.hpp  lidar_trajectory_node.hpp  visibility_control.hpp
launch/: lidar_trajectory.launch.py
src/: lidar_trajectory.cpp  lidar_trajectory_node.cpp
test/: test_lidar_trajectory.cpp
